--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="./4.0 File Paths/Folder0/index.html">File Paths</a></li>
       <li><a href="./4.1+Webpages/index.html">Webpages</a></li>
       <li><a href="./4.3 HTML Porfolio Project/">HTML Portfolio Project</a></li>
+      <li><a href="./Capstone-Project1/index.html">Capstone Project 1</a></li>
     </ol>
   </body>
 </html>
