--- a/Capstone-Project1/index.html
+++ b/Capstone-Project1/index.html
@@ -51,7 +51,7 @@
     <hr />
     <h4><a href="./public/contact.html">Contact me</a></h4>
     <footer>
-      <small> © Copyright Sriyanshu Azad </small>
+      <small>© Copyright 2025 Sriyanshu Azad</small>
     </footer>
   </body>
 </html>
