--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All my learnings</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -11,19 +12,24 @@
     <hr />
     <h2>HTML</h2>
     <ol>
-      <li><a href="./2.1 Heading Element/index.html">Heading Element</a></li>
-      <li><a href="./2.2 Paragraph Element/index.html">Paragraph Element</a></li>
-      <li><a href="./2.3 Void Elements/index.html">Void Elements</a></li>
-      <li><a href="./2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></li>
-      <li><a href="./3.0 List Elements/">List Elements</a></li>
-      <li><a href="./3.1 Nesting and Indentation/">Nesting and Indentation</a></li>
-      <li><a href="./3.2 Anchor Elements/">Anchor Elements</a></li>
-      <li><a href="./3.3 Image Elements/">Image Elements</a></li>
-      <li><a href="./3.4 Birthday Invite Project/">Birthday Invite Project</a></li>
-      <li><a href="./4.0 File Paths/Folder0/index.html">File Paths</a></li>
-      <li><a href="./4.1+Webpages/index.html">Webpages</a></li>
-      <li><a href="./4.3 HTML Porfolio Project/">HTML Portfolio Project</a></li>
-      <li><a href="./Capstone-Project1/index.html">Capstone Project 1</a></li>
+      <li><a class="html" href="./2.1 Heading Element/index.html">Heading Element</a></li>
+      <li><a class="html" href="./2.2 Paragraph Element/index.html">Paragraph Element</a></li>
+      <li><a class="html" href="./2.3 Void Elements/index.html">Void Elements</a></li>
+      <li><a class="html" href="./2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></li>
+      <li><a class="html" href="./3.0 List Elements/">List Elements</a></li>
+      <li><a class="html" href="./3.1 Nesting and Indentation/">Nesting and Indentation</a></li>
+      <li><a class="html" href="./3.2 Anchor Elements/">Anchor Elements</a></li>
+      <li><a class="html" href="./3.3 Image Elements/">Image Elements</a></li>
+      <li><a class="html" href="./3.4 Birthday Invite Project/">Birthday Invite Project</a></li>
+      <li><a class="html" href="./4.0 File Paths/Folder0/index.html">File Paths</a></li>
+      <li><a class="html" href="./4.1+Webpages/index.html">Webpages</a></li>
+      <li><a class="html" href="./4.3 HTML Porfolio Project/">HTML Portfolio Project</a></li>
+      <li><a class="html" href="./Capstone-Project1/index.html">Capstone Project 1</a></li>
+    </ol>
+    <h2>CSS</h2>
+    <ol>
+      <li><a class="css" href="./5.1. Adding CSS">Adding CSS to hmtl</a></li>
+      <li><a class="css" href="./5.3 CSS Selectors/">CSS Selectors</a></li>
     </ol>
   </body>
 </html>
