--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <ol>
       <li><a class="css" href="./5.1. Adding CSS">Adding CSS to hmtl</a></li>
       <li><a class="css" href="./5.3 CSS Selectors/">CSS Selectors</a></li>
+      <li><a class="css" href="./5.4+Color+Vocab+Project/">Color Vocab Project</a></li>
     </ol>
   </body>
 </html>
