--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a class="css" href="./5.1. Adding CSS">Adding CSS to hmtl</a></li>
       <li><a class="css" href="./5.3 CSS Selectors/">CSS Selectors</a></li>
       <li><a class="css" href="./5.4+Color+Vocab+Project/">Color Vocab Project</a></li>
+      <li><a class="css" href="./6.0 CSS Colors/">CSS Colors</a></li>
     </ol>
   </body>
 </html>
